# tmnt-api

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml  tests.yml
app/: __init__.py  characters.json  config.py  main.py
app/api/: characters.py  dependencies.py  game_data.py  items.py  monsters.py
app/api/v1/: __init__.py  characters.py  combat.py  game_data.py  items.py  monsters.py
app/config/: __init__.py  constants.py  settings.py
app/data/: character_names.json  character_traits.json  characters.json  items.json  monster_names.json  monsters.json
app/models/: __init__.py  character.py  combat.py  common.py  item.py  monster.py  schemas.py
app/models/responses/: __init__.py  character_responses.py  item_responses.py  monster_responses.py
app/services/: character_service.py  combat_service.py  data_loader.py  monster_service.py
app/utils/: __init__.py  calculations.py  dice.py  formatters.py  validators.py
cdk/: README.md  app.py  cdk.json  deploy.sh  requirements.txt
cdk/stacks/: __init__.py  dnd_api_stack.py
tests/: conftest.py
tests/api/: test_characters.py  test_combat.py  test_game_data.py  test_items.py  test_monsters.py  test_pagination.py  test_races.py
tests/services/: test_character_service.py  test_combat_service.py  test_data_loader.py  test_monster_service.py
tests/utils/: test_calculations.py  test_dice.py  test_formatters.py  test_validators.py
